{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 373,
  "lineage": "6baf2452-b77f-e570-6de9-e0aae693aa6c",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:590184123325:internet-gateway/igw-00b8fe14aad218d3f",
            "id": "igw-00b8fe14aad218d3f",
            "owner_id": "590184123325",
            "tags": {
              "Name": "iVolve-IGW"
            },
            "tags_all": {
              "Name": "iVolve-IGW"
            },
            "vpc_id": "vpc-0419716712b126a5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0db7a80a9c2cfb76c",
            "arn": "arn:aws:ec2:us-west-1:590184123325:instance/i-0a151d1df0d171f9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a151d1df0d171f9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "iVolve-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d688a83683bf81d",
            "private_dns": "ip-10-0-0-9.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.9",
            "public_ip": "13.57.9.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ae96bdd0dd223a44",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00619e6d133497196",
            "tags": {
              "Name": "instance-0"
            },
            "tags_all": {
              "Name": "instance-0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b2d2f377cc1a6bae"
            ]
          },
          "dependencies": [
            "module.instance.data.aws_ami.amazon_ec2",
            "module.security-group.aws_security_group.app_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:590184123325:route-table/rtb-075f5bd9ad9538ad0",
            "id": "rtb-075f5bd9ad9538ad0",
            "owner_id": "590184123325",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b8fe14aad218d3f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-route-table"
            },
            "tags_all": {
              "Name": "Public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0419716712b126a5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.route-table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_ass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ad8bd88b62eb74c2",
            "route_table_id": "rtb-075f5bd9ad9538ad0",
            "subnet_id": "subnet-00619e6d133497196"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.route-table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:590184123325:security-group/sg-0b2d2f377cc1a6bae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b2d2f377cc1a6bae",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "terraform-20240612175444967300000001",
            "name_prefix": "terraform-",
            "owner_id": "590184123325",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public_SecuirtyGroup"
            },
            "tags_all": {
              "Name": "Public_SecuirtyGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0419716712b126a5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:590184123325:subnet/subnet-00619e6d133497196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00619e6d133497196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "590184123325",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Sub"
            },
            "tags_all": {
              "Name": "public-Sub"
            },
            "vpc_id": "vpc-0419716712b126a5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.iVolve_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iVolve_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:590184123325:vpc/vpc-0419716712b126a5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08a1a2c8aaf1048bf",
            "default_route_table_id": "rtb-094bfc799ad05aa07",
            "default_security_group_id": "sg-0e3a5e9f6e2fe2553",
            "dhcp_options_id": "dopt-0cf587e60cc653876",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0419716712b126a5c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-094bfc799ad05aa07",
            "owner_id": "590184123325",
            "tags": {
              "Name": "iVolve"
            },
            "tags_all": {
              "Name": "iVolve"
            }
          }
        }
      ]
    }
  ]
}